# group_6_mini_project_ros

./: CMakeLists.txt  package.xml
Angle_Detection/: CMakeLists.txt  main.cpp
Old_Homemade_Canny/Screw_Head_Detection_Tests/: CMakeLists.txt  main.cpp
Screw_Angle_Detector_Embedded/: CMakeLists.txt  main.cpp
image_convert/: RGB_array.txt  convert.py
images/cross/: metadata.yaml
images/cross_blue/: metadata.yaml
images/flathead/: metadata.yaml
images/flathead_blue/: metadata.yaml
images/new/cross/: metadata.yaml
images/new/flat/: metadata.yaml
images/new/penta/: metadata.yaml
images/new/square/: metadata.yaml
images/newnew/cross_0/: metadata.yaml
images/newnew/cross_1/: metadata.yaml
images/newnew/cross_2/: metadata.yaml
images/newnew/cross_3/: metadata.yaml
images/newnew/flat_0/: metadata.yaml
images/newnew/flat_1/: metadata.yaml
images/newnew/flat_2/: metadata.yaml
images/newnew/flat_3/: metadata.yaml
images/newnew/penta_0/: metadata.yaml
images/newnew/penta_1/: metadata.yaml
images/newnew/penta_2/: metadata.yaml
images/newnew/penta_3/: metadata.yaml
images/newnew/square_0/: metadata.yaml
images/newnew/square_1/: metadata.yaml
images/newnew/square_2/: metadata.yaml
images/newnew/square_3/: metadata.yaml
launch/: mpsoc.launch  pc.launch
src/: Angle_Node.cpp  Result_File.txt  Results.txt  accelerated_image_processor.cpp  image_subscriber.cpp  miniproject.cpp  test_kernel_dma_invert_multiple.cpp  test_kernel_dma_invert_multiple_image.cpp  test_only_dma.cpp
src/DynamixelSDK/: angles.py
src/DynamixelSDK/dynamixel_sdk_examples/src/: read_write_node.cpp
src/lib/DynamixelSDK/dynamixel_sdk_examples/src/: read_write_node.cpp
src/lib/Invert_v1_0/src/: xinvert_hw.h  xinvert_linux.c  xinvert_sinit.c
src/lib/images/: RGB_array.txt
src/motor_control/: CMakeLists.txt  package.xml
src/motor_control/include/Invert_v1_0/data/: Invert.mdd
src/motor_control/include/Invert_v1_0/src/: xinvert.c
src/motor_control/include/ReservedMemory-LKM-and-UserSpaceAPI/: reserved_mem.hpp
src/motor_control/src/: Angle_Node.cpp  CNN_interface.cpp  motor_control.cpp  test_dma  test_kernel_dma.cpp
src/screw_it/: CMakeLists.txt  package.xml
src/screw_it/config/: do_debug.yaml  params_1.yaml
src/screw_it/include/: testImage.h
src/screw_it/include/Invert_v1_0/data/: Invert.tcl
src/screw_it/include/Invert_v1_0/src/: Makefile  xinvert.h  xinvert_linux.c
src/screw_it/include/infer_v1_0/src/: Makefile  xinfer.c  xinfer.h  xinfer_hw.h  xinfer_linux.c
src/screw_it/include/infer_v1_0_axilite/data/: infer.mdd  infer.tcl
src/screw_it/include/infer_v1_0_axilite/src/: xinfer.c  xinfer.h  xinfer_hw.h  xinfer_sinit.c
src/screw_it/launch/: pc.launch
src/screw_it/src/: Angle_Node.cpp  CNN_axi_interface_test.cpp  CNN_interface.cpp  CNN_interface_test.cpp  motor_control.cpp  test_kernel_dma_invert.cpp
test_data/: Comparison.ods  DATA_2.ods  DATA_3.ods  DATA_A.csv  DATA_A.ods  DATA_B.ods  Synthesis_transfer_comparison.ods
